--- a/AspNetCore/src/Umbrella.AspNetCore.DynamicImage/Umbrella.AspNetCore.DynamicImage.csproj
+++ b/AspNetCore/src/Umbrella.AspNetCore.DynamicImage/Umbrella.AspNetCore.DynamicImage.csproj
@@ -36,6 +36,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<ProjectReference Include="..\..\..\Core\src\Umbrella.WebUtilities.DynamicImage\Umbrella.WebUtilities.DynamicImage.csproj" />
 		<ProjectReference Include="..\..\..\DynamicImage\src\Umbrella.DynamicImage.Abstractions\Umbrella.DynamicImage.Abstractions.csproj" />
 		<ProjectReference Include="..\Umbrella.AspNetCore.WebUtilities\Umbrella.AspNetCore.WebUtilities.csproj" />
 	</ItemGroup>
