--- a/Core/src/Umbrella.WebUtilities/Umbrella.WebUtilities.csproj
+++ b/Core/src/Umbrella.WebUtilities/Umbrella.WebUtilities.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFramework>netstandard2.0</TargetFramework>
@@ -37,10 +37,6 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\Umbrella.Utilities\Umbrella.Utilities.csproj" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<Folder Include="Core\Abstractions\" />
 	</ItemGroup>
 
 </Project>
