--- a/AspNetCore/test/Umbrella.AspNetCore.WebUtilities.DynamicImage.Test/Umbrella.AspNetCore.WebUtilities.DynamicImage.Test.csproj
+++ b/AspNetCore/test/Umbrella.AspNetCore.WebUtilities.DynamicImage.Test/Umbrella.AspNetCore.WebUtilities.DynamicImage.Test.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
@@ -20,9 +20,9 @@
     </PackageReference>
     <PackageReference Include="xunit" Version="2.4.1" />
   </ItemGroup>
-
+  
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Umbrella.AspNetCore.DynamicImage\Umbrella.AspNetCore.DynamicImage.csproj" />
+    <ProjectReference Include="..\..\src\Umbrella.AspNetCore.WebUtilities.DynamicImage\Umbrella.AspNetCore.WebUtilities.DynamicImage.csproj" />
   </ItemGroup>
 
   <ItemGroup>
