--- a/Core/src/Umbrella.WebUtilities/Umbrella.WebUtilities.csproj
+++ b/Core/src/Umbrella.WebUtilities/Umbrella.WebUtilities.csproj
@@ -33,6 +33,7 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
 		</PackageReference>
+		<PackageReference Include="Microsoft.Extensions.FileProviders.Physical" Version="3.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
