--- a/AspNetCore/test/Umbrella.AspNetCore.WebUtilities.DynamicImage.Test/Umbrella.AspNetCore.WebUtilities.DynamicImage.Test.csproj
+++ b/AspNetCore/test/Umbrella.AspNetCore.WebUtilities.DynamicImage.Test/Umbrella.AspNetCore.WebUtilities.DynamicImage.Test.csproj
@@ -10,8 +10,12 @@
   <PropertyGroup Condition="'$(Configuration)'=='AzureDevOps'">
     <Optimize>true</Optimize>
   </PropertyGroup>
-  
-  <ItemGroup>
+
+	<ItemGroup>
+		<FrameworkReference Include="Microsoft.AspNetCore.App" />
+	</ItemGroup>
+
+	<ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.3.0" />
     <PackageReference Include="Moq" Version="4.13.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1">
