--- a/AspNetCore/src/Umbrella.AspNetCore.WebUtilities.FileSystem/Umbrella.AspNetCore.WebUtilities.FileSystem.csproj
+++ b/AspNetCore/src/Umbrella.AspNetCore.WebUtilities.FileSystem/Umbrella.AspNetCore.WebUtilities.FileSystem.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFramework>netcoreapp3.0</TargetFramework>
@@ -17,7 +17,7 @@
 
 	<PropertyGroup>
 		<PackageId>Umbrella.AspNetCore.FileSystem</PackageId>
-		<Version>3.0.0-preview-0003</Version>
+		<Version>3.0.0-preview-0004</Version>
 		<Authors>Zinofi Digital Ltd</Authors>
 		<Company>Zinofi Digital Ltd</Company>
 		<Copyright>Zinofi Digital Ltd 2019</Copyright>
