--- a/AspNetCore/src/Umbrella.AspNetCore.WebUtilities.DynamicImage/Umbrella.AspNetCore.WebUtilities.DynamicImage.csproj
+++ b/AspNetCore/src/Umbrella.AspNetCore.WebUtilities.DynamicImage/Umbrella.AspNetCore.WebUtilities.DynamicImage.csproj
@@ -17,14 +17,14 @@
 
 	<PropertyGroup>
 		<PackageId>Umbrella.AspNetCore.WebUtilities.DynamicImage</PackageId>
-		<Version>3.0.0-preview-0011</Version>
+		<Version>3.0.0-preview-0015</Version>
 		<Authors>Zinofi Digital Ltd</Authors>
 		<Company>Zinofi Digital Ltd</Company>
 		<Copyright>Zinofi Digital Ltd 2019</Copyright>
 		<Description>
 			This package contains middleware and tag helpers to be used in conjunction with the Umbrella.DynamicImage.* packages.
 		</Description>
-		<PackageLicenseUrl>https://github.com/zinofi/Umbrella/blob/master/LICENSE</PackageLicenseUrl>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<PackageProjectUrl>https://github.com/zinofi/Umbrella</PackageProjectUrl>
 	</PropertyGroup>
 
