--- a/DataAccess/src/Umbrella.DataAccess.EntityFrameworkCore/Umbrella.DataAccess.EntityFrameworkCore.csproj
+++ b/DataAccess/src/Umbrella.DataAccess.EntityFrameworkCore/Umbrella.DataAccess.EntityFrameworkCore.csproj
@@ -16,12 +16,12 @@
 
 	<PropertyGroup>
 		<PackageId>Umbrella.DataAccess.EntityFrameworkCore</PackageId>
-		<Version>3.0.0-preview-0011</Version>
+		<Version>3.0.0-preview-0015</Version>
 		<Authors>Zinofi Digital Ltd</Authors>
 		<Company>Zinofi Digital Ltd</Company>
 		<Copyright>Zinofi Digital Ltd 2019</Copyright>
 		<Description>This package is a placeholder for a future EF Core port of the Umbrella.DataAccess.EF6 package.</Description>
-		<PackageLicenseUrl>https://github.com/zinofi/Umbrella/blob/master/LICENSE</PackageLicenseUrl>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<PackageProjectUrl>https://github.com/zinofi/Umbrella</PackageProjectUrl>
 	</PropertyGroup>
 
