--- a/DataAccess/src/Umbrella.DataAccess.MultiTenant.EF6/Umbrella.DataAccess.MultiTenant.EF6.csproj
+++ b/DataAccess/src/Umbrella.DataAccess.MultiTenant.EF6/Umbrella.DataAccess.MultiTenant.EF6.csproj
@@ -17,14 +17,14 @@
 
 	<PropertyGroup>
 		<PackageId>Umbrella.DataAccess.MultiTenant.EF6</PackageId>
-		<Version>3.0.0-preview-0011</Version>
+		<Version>3.0.0-preview-0015</Version>
 		<Authors>Zinofi Digital Ltd</Authors>
 		<Company>Zinofi Digital Ltd</Company>
 		<Copyright>Zinofi Digital Ltd 2019</Copyright>
 		<Description>
 			This package builds on the Umbrella.DataAccess.EF6 repositories concept to allow for multi-tenanted application data access logic.
 		</Description>
-		<PackageLicenseUrl>https://github.com/zinofi/Umbrella/blob/master/LICENSE</PackageLicenseUrl>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<PackageProjectUrl>https://github.com/zinofi/Umbrella</PackageProjectUrl>
 	</PropertyGroup>
 
