--- a/Legacy/src/Umbrella.Legacy.WebUtilities.Bundling/Umbrella.Legacy.WebUtilities.Bundling.csproj
+++ b/Legacy/src/Umbrella.Legacy.WebUtilities.Bundling/Umbrella.Legacy.WebUtilities.Bundling.csproj
@@ -17,14 +17,14 @@
 
   <PropertyGroup>
     <PackageId>Umbrella.Legacy.WebUtilities.Bundling</PackageId>
-    <Version>3.0.0-preview-0011</Version>
+    <Version>3.0.0-preview-0015</Version>
     <Authors>Zinofi Digital Ltd</Authors>
     <Company>Zinofi Digital Ltd</Company>
     <Copyright>Zinofi Digital Ltd 2019</Copyright>
     <Description>
       This package contains bundling utilities to aid using the legacy ASP.NET stack with the Microsoft.AspNet.Web.Optimization package.
     </Description>
-    <PackageLicenseUrl>https://github.com/zinofi/Umbrella/blob/master/LICENSE</PackageLicenseUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/zinofi/Umbrella</PackageProjectUrl>
   </PropertyGroup>
 
