--- a/TypeScript/src/Umbrella.TypeScript.Aurelia/Umbrella.TypeScript.Aurelia.csproj
+++ b/TypeScript/src/Umbrella.TypeScript.Aurelia/Umbrella.TypeScript.Aurelia.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFramework>netstandard2.0</TargetFramework>
@@ -17,14 +17,14 @@
 
 	<PropertyGroup>
 		<PackageId>Umbrella.TypeScript.Aurelia</PackageId>
-		<Version>3.0.0-preview-0006</Version>
+		<Version>3.0.0-preview-0015</Version>
 		<Authors>Zinofi Digital Ltd</Authors>
 		<Company>Zinofi Digital Ltd</Company>
 		<Copyright>Zinofi Digital Ltd 2019</Copyright>
 		<Description>
 			This package builds on the Umbrella.TypeScript generators by providing a generator specifically for creating code for use with Aurelia.
 		</Description>
-		<PackageLicenseUrl>https://github.com/zinofi/Umbrella/blob/master/LICENSE</PackageLicenseUrl>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<PackageProjectUrl>https://github.com/zinofi/Umbrella</PackageProjectUrl>
 	</PropertyGroup>
 
