--- a/TypeScript/src/Umbrella.TypeScript.Tools/Umbrella.TypeScript.Tools.csproj
+++ b/TypeScript/src/Umbrella.TypeScript.Tools/Umbrella.TypeScript.Tools.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0">
+<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0">
 
 	<PropertyGroup>
 		<AssemblyName>dotnet-umbrella-ts</AssemblyName>
@@ -19,7 +19,7 @@
 	<PropertyGroup>
 		<PackageId>Umbrella.TypeScript.Tools</PackageId>
 		<PackageType>DotnetCliTool</PackageType>
-		<Version>3.0.0-preview-0015</Version>
+		<Version>3.0.0-preview-0018</Version>
 		<Authors>Zinofi Digital Ltd</Authors>
 		<Company>Zinofi Digital Ltd</Company>
 		<Copyright>Zinofi Digital Ltd 2019</Copyright>
