--- a/AspNetCore/src/Umbrella.AspNetCore.WebUtilities.DynamicImage/Umbrella.AspNetCore.WebUtilities.DynamicImage.csproj
+++ b/AspNetCore/src/Umbrella.AspNetCore.WebUtilities.DynamicImage/Umbrella.AspNetCore.WebUtilities.DynamicImage.csproj
@@ -44,4 +44,8 @@
 		<ProjectReference Include="..\Umbrella.AspNetCore.WebUtilities\Umbrella.AspNetCore.WebUtilities.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Middleware\" />
+	</ItemGroup>
+
 </Project>
