--- a/Core/src/Umbrella.WebUtilities.DynamicImage/Umbrella.WebUtilities.DynamicImage.csproj
+++ b/Core/src/Umbrella.WebUtilities.DynamicImage/Umbrella.WebUtilities.DynamicImage.csproj
@@ -38,6 +38,7 @@
 	<ItemGroup>
 	  <ProjectReference Include="..\..\..\DynamicImage\src\Umbrella.DynamicImage.Abstractions\Umbrella.DynamicImage.Abstractions.csproj" />
 	  <ProjectReference Include="..\..\..\FileSystem\src\Umbrella.FileSystem.Abstractions\Umbrella.FileSystem.Abstractions.csproj" />
+	  <ProjectReference Include="..\Umbrella.WebUtilities\Umbrella.WebUtilities.csproj" />
 	</ItemGroup>
 	
 </Project>
