--- a/TypeScript/src/Umbrella.TypeScript.Tools/Umbrella.TypeScript.Tools.csproj
+++ b/TypeScript/src/Umbrella.TypeScript.Tools/Umbrella.TypeScript.Tools.csproj
@@ -18,8 +18,8 @@
 
 	<PropertyGroup>
 		<PackageId>Umbrella.TypeScript.Tools</PackageId>
-		<PackageType>DotnetCliTool</PackageType>
-		<Version>3.0.0-preview-0030</Version>
+		<PackAsTool>true</PackAsTool>
+		<Version>3.0.0-preview-0032</Version>
 		<Authors>Zinofi Digital Ltd</Authors>
 		<Company>Zinofi Digital Ltd</Company>
 		<Copyright>Zinofi Digital Ltd 2019</Copyright>
