Updated NuGet packages to the latest version. Updated to netcoreapp3.1

--- a/Legacy/src/Umbrella.Legacy.WebUtilities.FileSystem/Umbrella.Legacy.WebUtilities.FileSystem.csproj
+++ b/Legacy/src/Umbrella.Legacy.WebUtilities.FileSystem/Umbrella.Legacy.WebUtilities.FileSystem.csproj
@@ -30,7 +30,7 @@
 		<ProjectReference Include="..\..\..\Core\src\Umbrella.WebUtilities.FileSystem\Umbrella.WebUtilities.FileSystem.csproj" />
 		<ProjectReference Include="..\..\..\FileSystem\src\Umbrella.FileSystem.Abstractions\Umbrella.FileSystem.Abstractions.csproj" />
 		<ProjectReference Include="..\Umbrella.Legacy.WebUtilities\Umbrella.Legacy.WebUtilities.csproj" />
-		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta-63127-02">
+		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
 		</PackageReference>
