--- a/DataAccess/src/Umbrella.DataAccess.MultiTenant.Abstractions/Umbrella.DataAccess.MultiTenant.Abstractions.csproj
+++ b/DataAccess/src/Umbrella.DataAccess.MultiTenant.Abstractions/Umbrella.DataAccess.MultiTenant.Abstractions.csproj
@@ -29,8 +29,8 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.0.0" />
-		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta-63127-02">
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.0" />
+		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
 		</PackageReference>
