--- a/Legacy/src/Umbrella.Legacy.WebUtilities.DataAnnotations/Umbrella.Legacy.WebUtilities.DataAnnotations.csproj
+++ b/Legacy/src/Umbrella.Legacy.WebUtilities.DataAnnotations/Umbrella.Legacy.WebUtilities.DataAnnotations.csproj
@@ -30,7 +30,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNet.Mvc" Version="5.2.7" />
-		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta-63127-02">
+		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
 		</PackageReference>
