Fixes Updated version to 3.0.0-preview-0058

--- a/DynamicImage/test/Umbrella.DynamicImage.Test/Umbrella.DynamicImage.Test.csproj
+++ b/DynamicImage/test/Umbrella.DynamicImage.Test/Umbrella.DynamicImage.Test.csproj
@@ -23,6 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\Internal\src\Umbrella.Internal.Mocks\Umbrella.Internal.Mocks.csproj" />
     <ProjectReference Include="..\..\src\Umbrella.DynamicImage.Abstractions\Umbrella.DynamicImage.Abstractions.csproj" />
     <ProjectReference Include="..\..\src\Umbrella.DynamicImage.Caching.AzureStorage\Umbrella.DynamicImage.Caching.AzureStorage.csproj" />
     <ProjectReference Include="..\..\src\Umbrella.DynamicImage\Umbrella.DynamicImage.csproj" />
