Updated the version to 2.9.8-preview-001

--- a/Core/src/Umbrella.Utilities.Integration.NewtonsoftJson/Umbrella.Utilities.Integration.NewtonsoftJson.csproj
+++ b/Core/src/Umbrella.Utilities.Integration.NewtonsoftJson/Umbrella.Utilities.Integration.NewtonsoftJson.csproj
@@ -16,7 +16,7 @@
   
   <PropertyGroup>
     <PackageId>Umbrella.Utilities.Integration.NewtonsoftJson</PackageId>
-    <Version>2.9.7</Version>
+    <Version>2.9.8-preview-001</Version>
     <Authors>Richard Edwards</Authors>
     <Company>Zinofi Digital Ltd</Company>
     <Copyright>Zinofi Digital Ltd 2019</Copyright>
