--- a/TypeScript/src/Umbrella.TypeScript/Umbrella.TypeScript.csproj
+++ b/TypeScript/src/Umbrella.TypeScript/Umbrella.TypeScript.csproj
@@ -15,7 +15,7 @@
   
   <PropertyGroup>
     <PackageId>Umbrella.TypeScript</PackageId>
-    <Version>2.9.7</Version>
+    <Version>2.9.8-preview-001</Version>
     <Authors>Richard Edwards</Authors>
     <Company>Zinofi Digital Ltd</Company>
     <Copyright>Zinofi Digital Ltd 2019</Copyright>
