--- a/AspNetCore/src/Umbrella.AspNetCore.WebUtilities/Umbrella.AspNetCore.WebUtilities.csproj
+++ b/AspNetCore/src/Umbrella.AspNetCore.WebUtilities/Umbrella.AspNetCore.WebUtilities.csproj
@@ -15,7 +15,7 @@
   
   <PropertyGroup>
     <PackageId>Umbrella.AspNetCore.WebUtilities</PackageId>
-    <Version>2.9.8-preview-001</Version>
+    <Version>2.9.8</Version>
     <Authors>Richard Edwards</Authors>
     <Company>Zinofi Digital Ltd</Company>
     <Copyright>Zinofi Digital Ltd 2020</Copyright>
