Initial move of code developed for ASP.NET Core 3 / EF Core 3 projects.

--- a/AspNetCore/src/Umbrella.AspNetCore.WebUtilities.FileSystem/Umbrella.AspNetCore.WebUtilities.FileSystem.csproj
+++ b/AspNetCore/src/Umbrella.AspNetCore.WebUtilities.FileSystem/Umbrella.AspNetCore.WebUtilities.FileSystem.csproj
@@ -2,6 +2,7 @@
 
 	<PropertyGroup>
 		<TargetFramework>netcoreapp3.1</TargetFramework>
+		<Nullable>enable</Nullable>
 		<LangVersion>latest</LangVersion>
 		<Configurations>Debug;Release;AzureDevOps</Configurations>
 		<DocumentationFile>bin\Release\netcoreapp3.1\Umbrella.AspNetCore.FileSystem.xml</DocumentationFile>
