--- a/AspNetCore/src/Umbrella.AspNetCore.WebUtilities/Umbrella.AspNetCore.WebUtilities.csproj
+++ b/AspNetCore/src/Umbrella.AspNetCore.WebUtilities/Umbrella.AspNetCore.WebUtilities.csproj
@@ -1,7 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFramework>netcoreapp3.1</TargetFramework>
+		<Nullable>enable</Nullable>
 		<LangVersion>latest</LangVersion>
 		<Configurations>Debug;Release;AzureDevOps</Configurations>
 		<DocumentationFile>bin\Release\netcoreapp3.1\Umbrella.AspNetCore.WebUtilities.xml</DocumentationFile>
