--- a/DataAccess/src/Umbrella.DataAccess.EntityFrameworkCore/Umbrella.DataAccess.EntityFrameworkCore.csproj
+++ b/DataAccess/src/Umbrella.DataAccess.EntityFrameworkCore/Umbrella.DataAccess.EntityFrameworkCore.csproj
@@ -1,7 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFramework>netstandard2.0</TargetFramework>
+		<Nullable>enable</Nullable>
 		<LangVersion>latest</LangVersion>
 		<Configurations>Debug;Release;AzureDevOps</Configurations>
 		<DocumentationFile>bin\Release\netstandard2.0\Umbrella.DataAccess.EntityFrameworkCore.xml</DocumentationFile>
@@ -20,14 +21,13 @@
 		<Authors>Zinofi Digital Ltd</Authors>
 		<Company>Zinofi Digital Ltd</Company>
 		<Copyright>Zinofi Digital Ltd 2020</Copyright>
-		<Description>This package is a placeholder for a future EF Core port of the Umbrella.DataAccess.EF6 package.</Description>
+		<Description>This package contains data access infrastructure to allow for the simple creation of Entity Framework Core repositories.</Description>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<PackageProjectUrl>https://github.com/zinofi/Umbrella</PackageProjectUrl>
 	</PropertyGroup>
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.0" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.0" />
 		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
@@ -35,7 +35,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\Umbrella.DataAccess.EF.Abstractions\Umbrella.DataAccess.EF.Abstractions.csproj" />
+	  <ProjectReference Include="..\Umbrella.DataAccess.Abstractions\Umbrella.DataAccess.Abstractions.csproj" />
 	</ItemGroup>
 
 </Project>
