--- a/FileSystem/src/Umbrella.FileSystem.AzureStorage/Umbrella.FileSystem.AzureStorage.csproj
+++ b/FileSystem/src/Umbrella.FileSystem.AzureStorage/Umbrella.FileSystem.AzureStorage.csproj
@@ -29,11 +29,11 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Azure.Storage.Blobs" Version="12.4.4" />
 		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="WindowsAzure.Storage" Version="9.3.3" />
 	</ItemGroup>
 
 	<ItemGroup>
